playbooks/project/roles/network/files/flink-ingress.yaml
# Ingress resource for Flink UI
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flink-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
    - host: flink.scalehub.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                  name: flink-jobmanager
                  port:
                    number: 8081
